Fixed breadcrumb vertical alignment

--- a/src/assets/css/defaults.css
+++ b/src/assets/css/defaults.css
@@ -139,6 +139,10 @@
     width: 1.2rem;
 }
 
+.breadcrumbs-icon img {
+    vertical-align: sub;
+}
+
 .breadcrumbs .direction-icon img {
     transform: rotate(180deg);
 }
